Change sign in button in myAccount to sign out. Fix some button actions. Fix alignment on cancel button.

--- a/DAT250-auction/web/resources/css/myAccount.css
+++ b/DAT250-auction/web/resources/css/myAccount.css
@@ -5,9 +5,13 @@
     width:100%;
 }
 
-.login-button{
+.cancel-button{
     font-size: 20px;
-    border-radius: 1px;
+    border-radius: 2px;
     color: white;
     background-color: #d5101f;
+}
+
+.cancel-button-container {
+    margin-left:auto;
 }
